<resources>
    <string name="app_name">AndroidHarkkatyo</string>
    <string name="profile">Profiili:</string>
    <string name="name">Nimi</string>
    <string name="surname">Sukunimi</string>
    <string name="first_name">Etunimi:</string>
    <string name="weather_app">Sää-appi</string>
    <string name="go_to_weather">Hae säädataa</string>
    <string name="surname_field">Sukunimi:</string>
    <string name="enter_city_name">Kaupungin nimi...</string>
    <string name="get_weather">Hae sää</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="add_city">ADD CITY</string>
    <string name="cities">CITIES</string>
</resources>