<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="412dp"
        android:layout_height="104dp"
        android:background="@color/black_shade_1"
        android:text="@string/weather_app"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/NextPageButton"
        android:layout_width="168dp"
        android:layout_height="48dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="32dp"
        android:text="@string/go_to_weather"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        android:visibility="visible"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/surname_field"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />



</androidx.constraintlayout.widget.ConstraintLayout>