<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_shade_1"
    tools:context=".SecondPage">




    <EditText
        android:id="@+id/et"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/enter_city_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        android:autofillHints="" />


    <ImageView
        android:id="@+id/searchIcon"
        android:layout_width="40dp"
        android:layout_height="31dp"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:layout_marginTop="95dp"
        android:layout_weight="0.5"
        android:background="@android:color/transparent"
        android:src="@drawable/searchicon"
        app:layout_constraintStart_toEndOf="@+id/et"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="8dp"
        android:text="@string/name"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/text_surname"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="243dp"
        android:text="@string/surname"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="7dp"
        android:text="@string/profile"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/text_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginTop="56dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et" />

    <TextView
        android:id="@+id/tvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tvCity"
        app:layout_constraintTop_toBottomOf="@+id/et" />

    <TextView
        android:id="@+id/tvTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="52dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCity" />

    <TextView
        android:id="@+id/tvFeels_Like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTemp" />

    <TextView
        android:id="@+id/tvMinTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFeels_Like" />


    <TextView
        android:id="@+id/tvMaxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMinTemp" />

    <TextView
        android:id="@+id/tvWindSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeatherDesc" />

    <TextView
        android:id="@+id/tvWindDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWindSpeed" />

    <TextView
        android:id="@+id/tvHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMaxTemp" />

    <TextView
        android:id="@+id/tvWeatherDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHumidity" />

    <Button
        android:id="@+id/addCity"
        android:layout_width="114dp"
        android:layout_height="41dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="#3E3E3E"
        android:text="@string/add_city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et" />

    <Button
        android:id="@+id/viewSaved"
        android:layout_width="114dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#3E3E3E"
        android:text="@string/cities"
        app:layout_constraintStart_toEndOf="@+id/addCity"
        app:layout_constraintTop_toBottomOf="@+id/et" />


</androidx.constraintlayout.widget.ConstraintLayout>


